Bug #246744 --> additional account identities aren't getting the right smpt server key and sent folder values sr=bienvenu